CloudAlpacas-repo/salesforce/main/default/objects/SDO_Generated_Operation_Plan_Execution__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <description>SE-editable execution timestamp. Used by the Refresh Demo Dates utility to keep executions aligned with their parent plan&apos;s Plan_Created_Date__c.</description>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>