CloudAlpacas-repo/salesforce/main/default/objects/SDO_Generated_Operation_Plan_Execution__c/fields/Generated_Op_Plan_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Generated_Op_Plan_Execution_Status__c</fullName>
    <description>Execution outcome. Drives Plan_Completed_Count_clc and Plan_Completed_clc in SI_Service_Assistant_SDM_5d5 — both filter/compare on the literal value &quot;Completed&quot;.</description>
    <label>Execution Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
                <isActive>false</isActive>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>