CloudAlpacas-repo/salesforce/main/default/objects/SDO_Generated_Operation_Plan_Execution__c/fields/Generated_Operation_Plan_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>Generated_Operation_Plan_Execution_Id__c</fullName>
    <description>DMO primary key. Maps to Generated_Operation_Plan_Execution2.Generated_Operation_Plan_Execution_Id in the semantic model.</description>
    <externalId>true</externalId>
    <label>Generated Operation Plan Execution Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>